<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--V1.0.0-->
    <string name="tb_app_name">同步SDK</string>
    <string name="tb_login_username">账号 :</string>
    <string name="tb_login_username_msg">同步账号/邮箱/手机号</string>
    <string name="tb_login_pwd">密码 :</string>
    <string name="tb_login_pwd_msg">请输入密码</string>
    <string name="tb_login_rempwd">记住密码</string>
    <string name="tb_login_autologin">自动登录</string>
    <string name="tb_login_name">登录</string>
    <string name="tb_user_login">用户登录</string>
    <string name="tb_login_forgetpwd">忘记密码?</string>
    <string name="tb_login_dialog_forgetpwd">忘记密码</string>
    <string name="tb_login_fastregister">立即注册</string>
    <string name="tb_login_title">使用第三方账号登录，无需注册</string>
    <string name="tb_login_weibologin">微博账号登录</string>
    <string name="tb_login_loading">努力登录中...</string>
    <string name="tb_login_get_history">正在获取登录记录</string>
    <string name="tb_login_get_history_failed">获取登陆历史失败</string>
    <string name="tb_login_failed_pass">账号和密码不符</string>
    <string name="tb_register_get_account">正在获取账号</string>
    <string name="tb_register_title">新用户注册</string>
    <string name="tb_register_commit">注册</string>
    <string name="tb_register_username_msg">支持邮箱和账号，限30个字符内</string>
    <string name="tb_register_pwd_msg">8-16位字符组合</string>
    <string name="tb_register_username">账　　号 :</string>
    <string name="tb_register_pwd">密　　码 :</string>
    <string name="tb_register_pwd_again">重复密码 :</string>
    <string name="tb_register_pwd_again_msg">请再输入一次密码</string>
    <string name="tb_register_name">真实姓名 :</string>
    <string name="tb_register_identity">身份证号 :</string>
    <string name="tb_register_name_msg">请输入真实姓名</string>
    <string name="tb_register_identity_msg">请输入身份证</string>
    <string name="tb_register_deal_msg">我已阅读并同意</string>
    <string name="tb_register_deal">《同步网络注册许可协议》</string>
    <string name="tb_register_loading">努力注册中...</string>
    <string name="tb_register_fast_msg">自动获取账号失败.</string>
    <string name="tb_register_username_fail_length">账号必须在4-30个字符内</string>
    <string name="tb_register_name_fail_length">姓名必须在2-5字符内</string>
    <string name="tb_register_username_fail_start">普通账号必须以字母开头,只能包含大小写英文字母，数字，下划线。</string>
    <string name="tb_register_email_fail_format">邮箱格式错误</string>
    <string name="tb_register_identity_fail_format">请输入正确的身份证号码</string>
    <string name="tb_register_name_fail_format">真实姓名只能包含中文</string>
    <string name="tb_register_name_empty">真实姓名不能为空</string>
    <string name="tb_suspension_person">个人中心</string>
    <string name="tb_suspension_game">精品推荐</string>
    <string name="tb_suspension_sms">系统公告</string>
    <string name="tb_suspension_bbs">游戏论坛</string>
    <string name="tb_tab_top_loading">努力加载中...</string>
    <string name="tb_base_tip">提示</string>
    <string name="tb_base_tip_ok">确定</string>
    <string name="tb_base_tip_cancel">取消</string>
    <string name="tb_base_login_fail">登录失败</string>
    <string name="tb_pass_fail_all_char">密码必须是8-16个字符</string>
    <string name="tb_pass_fail_all_number">密码不能全为数字</string>
    <string name="tb_pass_fail_all_letter">密码不能全为字母</string>
    <string name="tb_pass_fail_same">密码不能为同一字符</string>
    <string name="tb_pass_fail_contain_space">密码不能包含空格</string>
    <string name="tb_pass_fail_different">两次密码输入不一致</string>
    <string name="tb_pass_fail_contain_special">密码不能包含特殊字符</string>
    <string name="tb_pass_fail_login_username">账号不能为空</string>
    <string name="tb_pass_fail_login_pwd">密码不能为空</string>
    <string name="tb_pass_fail_similar">密码和注册账号太相似</string>
    <string name="tb_base_read_agreement">请阅读并接受用户协议</string>
    <string name="tb_base_tip_dialog_ok">好的</string>
    <string name="tb_base_tip_y">是</string>
    <string name="tb_base_tip_n">否</string>
    <string name="tb_order_num_null">订单号不能为空</string>
    <string name="tb_query_balance_loading">正在获取推币...</string>
    <string name="tb_pay_balance_not_enough">余额不足(还需%1$s推币)，是否进行充值购买？</string>
    <string name="tb_pay_balance_enough">是否花费%1$s推币进行购买？</string>
    <string name="tb_app_update_title">当前有更新，是否进行更新？</string>
    <string name="tb_app_must_update_title">有新版本啦，更新后才能继续体验哦！</string>
    <string name="tb_app_update_confirm">确认更新</string>
    <string name="tb_app_update_cancel">取消更新</string>
    <string name="tb_app_update_msg">新版本正在下载，请到消息通知栏查看任务下载进度.</string>
    <string name="tb_app_update_net">当前网络不顺畅，是否重试？</string>
    <string name="tb_init_error">初始化失败，是否重试？</string>
    <string name="tb_check_failed">检查更新失败，是否重试？</string>
    <string name="tb_download_progress">正在下载:%1$d%%</string>
    <string name="tb_download_success">下载成功（点击安装）</string>
    <string name="tb_base_net_empty">当前无网络，请开启网络后重试！</string>
    <string name="tb_base_retry">重试</string>
    <string name="tb_base_net_error">网络异常，请重试！</string>
    <string name="tb_unipay_result_success">银联支付结果：支付成功</string>
    <string name="tb_unipay_result_failed">银联支付结果：支付失败</string>
    <string name="tb_unipay_result_cancel">银联支付结果：取消支付</string>
    <string name="tb_alixpay_result_success">支付宝支付结果:支付成功</string>
    <string name="tb_alixpay_result_failed">支付宝支付结果:支付失败</string>
    <string name="tb_alixpay_result_cancel">支付宝支付结果:取消支付</string>
    <string name="tb_alixpay_result_paying">支付宝支付结果:支付结果确认中</string>
    <string name="tb_base_refresh">刷新</string>
    <string name="tb_base_close">关闭</string>
    <string name="tb_web_net_error">网络不通畅，请检查后再试</string>

    <!--V1.2.0-->
    <string name="tb_register_mobile">手机号 :</string>
    <string name="tb_register_mobile_hint">请输入11位中国大陆手机号码</string>
    <string name="tb_register_code">验证码 :</string>
    <string name="tb_register_password">密　码 :</string>
    <string name="tb_register_code_hint">请输入短信验证码</string>
    <string name="tb_register_btn_send">发送验证码</string>
    <string name="tb_register_bt_resend">重新发送</string>
    <string name="tb_register_bt_remain">%1$ss后重发</string>
    <string name="tb_register_fail_mobile_empty">手机号码不能为空</string>
    <string name="tb_register_fail_mobile_error">请输入正确的手机号码</string>
    <string name="tb_register_fail_code_empty">验证码不能为空</string>
    <string name="tb_base_send_success">发送成功</string>
    <string name="tb_base_send_failed">发送失败，请重试</string>
    <string name="tb_register_bind_username">请输入待绑定同步账号</string>
    <string name="tb_register_bind_password">请填写与账号对应的密码</string>
    <string name="tb_register_confirm_bind">确认绑定</string>
    <string name="tb_register_bind_title">完善账号信息</string>
    <string name="tb_login_qq">QQ登录</string>
    <string name="tb_login_wb">微博登录</string>

    <string name="tb_base_bind_success">绑定成功</string>
    <string name="tb_base_create_account">创建账号</string>
    <string name="tb_base_binding">绑定中...</string>
    <string name="tb_base_bind">绑定</string>
    <string name="tb_bind_tip_msg">如果已有同步账号，请绑定，以保证数据同步。如果未注册过同步账号，请选择“自动注册”。</string>
    <string name="tb_login_oauth_failed">授权失败，请重试!</string>
    <string name="tb_login_failed">登录失败，请重试！！</string>
    <string name="tb_register_auto">自动注册</string>
    <string name="tb_base_server_error">服务器数据处理异常，请重试！</string>
    <string name="tb_pass_security_tip">为了增加支付系统的安全性，防止账号盗刷风险，请设置您的支付密码</string>
    <string name="tb_base_confirm">确定</string>
    <string name="tb_base_complete">完成</string>
    <string name="tb_security_pass_title">请输入支付密码</string>
    <string name="tb_security_pass_confirm_title">请再次输入支付密码</string>
    <string name="tb_security_pass_fail_length">支付密码必须为6位数字</string>
    <string name="tb_security_pass_fail_confirm">两次输入的密码不一致，请重新输入</string>
    <string name="tb_security_pass_fail">设置失败，请重新设置</string>

    <string name="tb_security_pass_tip_title">支付密码设置成功</string>
    <string name="tb_security_pass_tip_msg">您可以去个人中心进行支付密码的管理与查看</string>
</resources>
